After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 591497 - Bookmark submenu should not have an icon
Bookmark submenu should not have an icon
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: menu
git master
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-08-11 21:52 UTC by Michael Monreal
Modified: 2009-08-12 08:24 UTC
See Also:
GNOME target: ---
GNOME version: 2.27/2.28


Attachments
Screenshot (22.98 KB, image/png)
2009-08-12 07:18 UTC, Michael Monreal
Details

Description Michael Monreal 2009-08-11 21:52:23 UTC
The Places->Bookmarks submenu (if you have >5 bookmarks or something like that) should not have an icon following the latest menu icon policy.
Comment 1 Vincent Untz 2009-08-11 22:13:34 UTC
Already fixed in git :-)
Comment 2 Michael Monreal 2009-08-12 07:18:10 UTC
Created attachment 140528 [details]
Screenshot

I just did a new build of git master head and I still see the icon. I don't feel it qualifies as an object or a location (while Home/Desktop/Computer/Network surely do)
Comment 3 Vincent Untz 2009-08-12 08:24:25 UTC
Argh, sorry, I was confusing things with another item that got fixed. Really fixed now.