[panel] Do not always show menu icon for Bookmark/Media submenu

http://bugzilla.gnome.org/show_bug.cgi?id=591497